conf/template/route.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-yo-img-sim-audit        # required
  namespace: grey                     # required
  labels:
    app: hello-yo-img-sim-audit       # required
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: hello-yo-img-sim-audit       # required

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-yo-img-sim-audit         # required
  namespace: grey                      # required
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway
  http:
  - match:
    - uri:
        prefix: /grey/hello-yo-img-sim-audit   # required
    rewrite:
      uri: /api/hello-yo-img-sim-audit
    route:
    - destination:
        host: hello-yo-img-sim-audit           # required

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-yo-img-sim-audit                  # required
  namespace: grey
spec:
  host: hello-yo-img-sim-audit                  # required
